# QueryLakeBackend

./: .env.example  .gitignore  .pre-commit-config.yaml  CLI_SPRINT.md  CONTRIBUTING.md  GPU_SCALING_PLANNING_MODEL_REQUEST.md  LICENSE  Makefile  PLANNING_MODEL_REQUEST.md  README.md  config.json  config.json.bak  config_default_llm.json  docker-compose-only-db.yml  docker-compose-redis.yml  docker-compose.yml  grammar_sampling_functions.py  ical_club_61092.ics  myLSU_Ad_PPT_template.potx  old_server.py  pyproject.toml  pytest.ini  ray_placement_groups_doc.md  ray_port_unit_tests.ipynb  reformated_fill_in.json  requirements.txt  requirements_api.txt  requirements_full.txt  requirements_inference.txt  requirements_ocr.txt  requirements_updated.txt  restart_database.sh  server.py  server_old.py  server_ray.py  setup.py  start_querylake.out  start_querylake.py  test_openai_chat.py  test_user_info.json  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci_runtime_profiler.yml  docs_checks.yml  legacy_path_guard.yml  retrieval_eval.yml  sdk_checks.yml  sdk_live_integration.yml  sdk_publish.yml  sdk_publish_dryrun.yml  unification_checks.yml
QueryLake/: __init__.py  api.py  api_admin.py  authentication.py  database_admin_operations.py  exllama_langchain.py  exllama_model.py  exllamav2_langchain.py  function_run_clean.py  instruction_templates.py  langchain_sse.py  model_manager.py  model_manager_old.py  sql_db.py
QueryLake/api/: api.py  api_admin.py  auth_utils.py  chat_sessions.py  collections.py  document.py  hashing.py  llm_model_calls.py  organizations.py  patho_report_stager.py  search.py  serpapi_result.json  single_user_auth.py  toolchains.py  usage_tracking.py  user_auth.py  web_search.py
QueryLake/api_functions/: chat_sessions.py  collections.py  document.py  organizations.py  user_auth.py
QueryLake/database/: create_db_session.py  database_admin_operations.py  encryption.py  instruction_templates.py  sql_db_tables.py
QueryLake/features_in_progress/: grammar_filtering.py
QueryLake/files/: __init__.py  object_store.py  service.py
QueryLake/misc_functions/: chat_history.py  external_providers.py  function_run_clean.py  grammar_sampling_functions.py  paradedb_query_parser.py  prompt_construction.py  server_class_functions.py  toolchain_state_management.py  vllm_lmformating_modifed_banned_tokens.py
QueryLake/models/: exllama_langchain.py  langchain_sse.py  model_manager.py  prompt_construction.py
QueryLake/observability/: metrics.py
QueryLake/operation_classes/: ray_chandra_class.py  (+9 more)
docs/: README.md
scripts/: __init__.py  backfill_documentchunk_embeddings.py  backfill_segments.py  bcas_casepack_registry.py  bcas_phase1_ingest.py  bcas_phase2_baseline_rollback.py  bcas_phase2_baseline_rollover.py  bcas_phase2_daily_status.py  bcas_phase2_eval.py  bcas_phase2_expand_trivia_samples.py  bcas_phase2_long_soak.sh  bcas_phase2_nightly_delta.py  bcas_phase2_nightly_profile.sh  bcas_phase2_nightly_strict_check.sh  bcas_phase2_nightly_trend.py  bcas_phase2_notify.py  bcas_phase2_oncall_dashboard.py  bcas_phase2_operator_eval.py  bcas_phase2_operator_gate.py  bcas_phase2_publish_strict_dashboard.py  bcas_phase2_release_gate.py  bcas_phase2_rollback_drill.sh  bcas_phase2_signoff_package.py  bcas_phase2_soak_tracker.py  bcas_phase2_stress.py  bcas_phase2_stress_matrix.py  bcas_phase2_stress_suite.py  bcas_phase2_strict_check.sh  bcas_phase2_three_lane_track.py  bcas_phase2_threshold_policy.py  bcas_phase2_trend_review.py  bcas_phase2_webhook_probe_server.py  bcas_phase2_weight_sweep.py  chandra_benchmark_pdf.py  chandra_closure_check.py  chandra_files_mixed_benchmark.py  chandra_quality_compare.py  chandra_vllm_probe.py  chandra_vllm_server.sh  chandra_vllm_smoke_benchmark.py  (+27 more)
sdk/python/: README.md  pyproject.toml
sdk/python/src/querylake_sdk/: __init__.py  cli.py  client.py  errors.py  models.py
sdk/python/tests/: test_ci_runtime_scripts.py  test_cli.py  test_client.py  test_examples_offline.py  test_live_preflight.py  test_sdk_dryrun_version.py  test_sdk_publish_guard.py
sdk/python/tests/integration/: live_query_cases.json  test_live_smoke.py
tests/: asyncio_websocket.py  knn_vs_svm.ipynb  ray_port_unit_tests.ipynb  test_auth_header_parity.py  test_auth_provider_local.py  test_backfill_segments.py  test_bcas_phase2_scripts.py  test_chandra_microbatch.py  test_content_fingerprint.py  test_create_db_session_sparse_index.py  test_embedding_records.py  test_events_auth_integration.py  test_files_subsystem.py  test_hermes_queue.py  test_ingestion_dual_write.py  test_ingestion_lineage.py  test_metrics_smoke.py  test_openai_endpoint_proxy_semantics.py  test_paradedb_query_parser.py  test_policy_provider.py  test_rate_limiter_no_redis.py  test_request_context.py  test_retrieval_acceptance_cycle.py  test_retrieval_adjacent_packer.py  test_retrieval_advanced_adapters.py  test_retrieval_cache.py  test_retrieval_eval_harness.py  test_retrieval_experiments.py  test_retrieval_explain.py  test_retrieval_gates.py  test_retrieval_legacy_disable.py  test_retrieval_orchestrated_compat.py  test_retrieval_orchestrator.py  test_retrieval_parity_harness.py  test_retrieval_pipeline_registry.py  test_retrieval_pipeline_runtime.py  test_retrieval_primitive_factory.py  test_retrieval_primitives_contracts.py  test_retrieval_promotion.py  test_retrieval_readiness.py  (+25 more)
toolchain_sessions_logs/: 1707175902.50_a48374b26a0c695de6d962a66f4f7bbafb47e3f523c6d09e59f74e8076a52a48.txt  1707175908.61_bd5d2f903a83bec94c8767348b8f6828506c12bda80e5b6cbc9225e9498dea07.txt
toolchains/: article_curation_search_agent.json  chat_session_normal.json  chat_session_normal_new_scheme.json  chat_session_normal_new_scheme_streaming.json  demo_cancelable_research.json  demo_parallel_brainstorm.json  demo_pdf_upload_v2.json  document_q_and_a.json  file_upload_test.json  iterable_feed_test.json  self_guided_rag.json  simple_rag.json  toolchain_specs.py
toolchains_v2_examples/: demo_streaming_coauthor.json  self_guided_rag_v2_ui.json
(+514 files in other folders)
