[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "querylake-sdk"
version = "0.1.0"
description = "Official Python SDK for QueryLake (auth, RAG workflows, OpenAI-compatible endpoints)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "QueryLake Team" }
]
keywords = ["querylake", "rag", "retrieval", "search", "llm", "sdk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/QueryLake/QueryLake"
Documentation = "https://github.com/QueryLake/QueryLakeBackend/tree/main/docs"
Source = "https://github.com/QueryLake/QueryLakeBackend"
Issues = "https://github.com/QueryLake/QueryLakeBackend/issues"

[project.scripts]
querylake = "querylake_sdk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/querylake_sdk"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
