[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "querylake-sdk"
version = "0.1.0"
description = "Official Python SDK for QueryLake (auth, RAG workflows, OpenAI-compatible endpoints)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "QueryLake Team" }
]
keywords = ["querylake", "rag", "retrieval", "search", "llm", "sdk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.11.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/kmccleary3301/QueryLake"
Documentation = "https://github.com/kmccleary3301/QueryLake/tree/main/docs"
Source = "https://github.com/kmccleary3301/QueryLake"
Issues = "https://github.com/kmccleary3301/QueryLake/issues"

[project.scripts]
querylake = "querylake_sdk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/querylake_sdk"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration_live: tests that run against a live QueryLake staging environment",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
files = ["src/querylake_sdk"]
pretty = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
